--- a/index.html
+++ b/index.html
@@ -378,13 +378,7 @@
         <div id="win98" class="content-section">
             <h2>Windows 98 Installation Tutorial</h2>
             
-            <div class="video-container">
-                <div class="video-placeholder">
-                    <p>📹 Video Tutorial: Installing Windows 98 in VirtualBox</p>
-                    <p style="font-size: 0.9em; margin-top: 10px;">Replace this section with your YouTube embedded video</p>
-                    <p style="font-size: 0.9em; color: #999;">Use: &lt;iframe width="100%" height="500" src="YOUR_YOUTUBE_URL" frameborder="0" allowfullscreen&gt;&lt;/iframe&gt;</p>
-                </div>
-            </div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TEduYu2m1W4?si=a8VzVPD39W5ZMGxw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
             <h3>About Windows 98</h3>
             <p>Windows 98, released on June 25, 1998, was the successor to Windows 95 and represented a significant evolution in Microsoft's consumer operating system line. It was specifically designed to be more stable and user-friendly while incorporating emerging technologies of the late 1990s. Windows 98 Second Edition (SE), released in 1999, further improved the system with better USB support and Internet Connection Sharing.</p>
@@ -773,3 +767,4 @@
     </script>
 </body>
 </html>
+
