--- a/index.html
+++ b/index.html
@@ -333,13 +333,7 @@
         <div id="win95" class="content-section">
             <h2>Windows 95 Installation Tutorial</h2>
             
-            <div class="video-container">
-                <div class="video-placeholder">
-                    <p>📹 Video Tutorial: Installing Windows 95 in VirtualBox</p>
-                    <p style="font-size: 0.9em; margin-top: 10px;">Replace this section with your YouTube embedded video</p>
-                    <p style="font-size: 0.9em; color: #999;">Use: &lt;iframe width="100%" height="500" src="YOUR_YOUTUBE_URL" frameborder="0" allowfullscreen&gt;&lt;/iframe&gt;</p>
-                </div>
-            </div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/02QDs7Uqj9w?si=WA5zK8H6HuwTGHy_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
             <h3>About Windows 95</h3>
             <p>Released on August 24, 1995, Windows 95 was a groundbreaking operating system that fundamentally changed personal computing. It introduced the iconic Start button, taskbar, and the concept of "plug and play" hardware installation. Windows 95 was the first Windows version to feature a 32-bit architecture while maintaining backward compatibility with 16-bit applications.</p>
@@ -767,4 +761,5 @@
     </script>
 </body>
 </html>
+
 
