Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -412,13 +412,7 @@
         <div id="winxp" class="content-section">
             <h2>Windows XP Installation Tutorial</h2>
             
-            <div class="video-container">
-                <div class="video-placeholder">
-                    <p>📹 Video Tutorial: Installing Windows XP in VirtualBox</p>
-                    <p style="font-size: 0.9em; margin-top: 10px;">Replace this section with your YouTube embedded video</p>
-                    <p style="font-size: 0.9em; color: #999;">Use: &lt;iframe width="100%" height="500" src="YOUR_YOUTUBE_URL" frameborder="0" allowfullscreen&gt;&lt;/iframe&gt;</p>
-                </div>
-            </div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/DKfPcP6gjFE?si=MKGtT__Q666aKdKd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
             <h3>About Windows XP</h3>
             <p>Windows XP, released on October 25, 2001, stands as one of Microsoft's most successful and longest-lived operating systems. The name "XP" stands for "eXPerience," reflecting Microsoft's goal of providing a more user-friendly and reliable computing experience. It merged the consumer-oriented Windows 9x line with the business-focused Windows NT/2000 architecture, creating a unified platform for all users.</p>
@@ -761,5 +755,6 @@
     </script>
 </body>
 </html>
+
 
 
